<resources>
    <string name="app_name">QianNiao</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_username_hint">千鸟账号</string>
    <string name="login_passworde_hint">千鸟密码</string>
    <string name="login_register">注册千鸟新用户</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_button_text">登  录</string>
    <string name="register_username">账号</string>
    <string name="register_alis">昵称</string>
    <string name="register_age">年龄</string>
    <string name="register_sex">性别</string>
    <string name="register_password">密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_username_hint">请使用手机号码注册</string>
    <string name="register_password_hint">8-16位数字或字母</string>
    <string name="register_confirm_password_hint">再次输入密码</string>
    <string name="register_sex_man">男</string>
    <string name="register_sex_woman">女</string>
    <string name="register_button">注  册</string>
    <string name="register_username_empty_error">账号不能为空！</string>
    <string name="register_username_duplicate_error">账号已被使用！</string>
    <string name="register_alia_empty_error">昵称不能为空！</string>
    <string name="register_password_empty_error">密码不能为空！</string>
    <string name="register_password_format_error">请输入8-16位数字或字母！</string>
    <string name="register_password_notsame_error">密码输入不一致！</string>
    <string name="register_username_invalid_error">请输入有效的手机号码！</string>
    <string name="register_confirm_password_empty_error">请再次输入密码！</string>
    <string name="register_failed_error">注册失败！请联系客服人员解决问题。</string>
    <string name="register_success">注册成功。</string>
    <string name="login_empty_error">用户名或密码不能为空！</string>
    <string name="login_password_error">用户名或密码不正确！</string>
    <string name="press_back_twice_to_exist">请再点一次退出</string>
    <string name="personal_upload_headimage">上传照片</string>
    <string name="personal_change_headimage">更换照片</string>
    <string name="personal_take_picture">拍照</string>
    <string name="personal_pick_picture">相册中选取</string>
</resources>
