<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical"
              tools:context=".activity.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/register_username"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/register_username_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundededitview"
            android:hint="@string/register_username_hint"
            android:textColorHint="@color/LightGrey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"

            android:text="@string/register_alis"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/register_alia_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundededitview"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/register_age"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <NumberPicker
            android:id="@+id/register_age_picker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/register_sex"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/register_radiogroup"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/register_radio_man"
                android:text="@string/register_sex_man"
                android:textSize="20sp"
                android:checked="true"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/register_radio_woman"
                android:textSize="20sp"
                android:text="@string/register_sex_woman"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/register_password"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/register_password_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundededitview"
            android:hint="@string/register_password_hint"
            android:password="true"
            android:textColorHint="@color/LightGrey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/register_confirm_password"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/register_confirm_password_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundededitview"
            android:hint="@string/register_confirm_password_hint"
            android:password="true"
            android:textColorHint="@color/LightGrey"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/Red"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/register_error_message_textview"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/register_button"
        android:textColor="@color/White"/>
</LinearLayout>
