<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical"
              tools:context=".activity.LoginFragment">

    <com.simple.qianniao.view.RoundImageView
        android:id="@+id/head_ImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/image1"
        />

    <EditText
        android:id="@+id/login_username_editview"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundededitview"
        android:hint="@string/login_username_hint"
        android:textColorHint="@color/LightGrey"/>

    <EditText
        android:id="@+id/login_password_editview"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundededitview"
        android:hint="@string/login_passworde_hint"
        android:password="true"
        android:textColorHint="@color/LightGrey"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_register"
            android:textColor="@color/White"
            />

        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/login_forget_password"
            android:textColor="@color/White"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/Red"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/login_button_text"
        android:textColor="@color/White"
        />

</LinearLayout>
